--- a/rapsteam/common/templates/index.html
+++ b/rapsteam/common/templates/index.html
@@ -9,7 +9,7 @@
         }
 
         nav {
-            background-color: #333;
+            background-color: #fffff1;
             color: white;
             padding: 10px;
         }
@@ -56,7 +56,9 @@
 
     <nav>
         <ul>
-            <li><a href="">Strona Główna</a></li>
+            <li>
+                <img src=https://rap.podkarpackie.pl/wp-content/uploads/2023/04/cropped-rapsteam-logo.png alt="Rapsteam logo" width="89" height="47">
+            </li>
             </ul>
     </nav>
 
