--- a/rapsteam/common/templates/navbar.html
+++ b/rapsteam/common/templates/navbar.html
@@ -29,6 +29,7 @@
     z-index: 99;
     width: 100%;
     margin-top: auto;
+    align-items: center;
     background: #d3d3d3;
     top: 0;
     left: 0;
