--- a/rapsteam/common/templates/navbar.html
+++ b/rapsteam/common/templates/navbar.html
@@ -28,7 +28,7 @@
     z-index: 99;
     width: 100%;
     margin-top: auto;
-    background: #d3d3d3;
+    background: white;
     top: 0;
     left: 0;
     margin: 0;
