--- a/rapsteam/common/templates/wybor_szkoly2.html
+++ b/rapsteam/common/templates/wybor_szkoly2.html
@@ -25,7 +25,10 @@
         <button>
             przycisk
         </button>
-        <p>{{ szkola.school_name }}</p>
+        <p>{{ nazwa_szkoly }}</p>
+        <form method="post">
+        {% csrf_token %}
+        </form>
     </div>
 </body>
 </html>
