--- a/rapsteam/common/templates/wybor_szkoly2.html
+++ b/rapsteam/common/templates/wybor_szkoly2.html
@@ -12,23 +12,38 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 80px;
+            padding-top: 80px;
+            height: 100%;
+            background-color: #F5F7FA;
+            box-shadow: 0px 3px 2px rgba(0,0,0,0.2)
+        }
+
+        .block-rect {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 100px;
+            background-color: white;
+            border-radius: 10px;
+            margin: 40px;
         }
         
     </style>
 </head>
 <body>
     <div class="container">
-        <p>
-            jakiś tekst
-        </p>
-        <button>
-            przycisk
-        </button>
-        <p>{{ nazwa_szkoly }}</p>
-        <form method="post">
-        {% csrf_token %}
-        </form>
+        <div class="block-rect">
+            <p>
+                jakiś tekst
+            </p>
+            <button>
+                przycisk
+            </button>
+            <p>{{ nazwa_szkoly }}</p>
+            <form method="post">
+            {% csrf_token %}
+            </form>
+        </div>
     </div>
 </body>
 </html>
