--- a/rapsteam/common/templates/wybor_szkoly2.html
+++ b/rapsteam/common/templates/wybor_szkoly2.html
@@ -7,45 +7,117 @@
         .body {
             font-family: Jost, sans-serif;
         }
-
+        hr{
+            width: 100%;
+        }
         .container {
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding-top: 80px;
-            height: 100%;
+            padding-top: 100px;
+            min-height: 100%;
             background-color: #F5F7FA;
-            box-shadow: 0px 3px 2px rgba(0,0,0,0.2)
+            
         }
-
         .block-rect {
             display: flex;
             flex-direction: column;
-            align-items: center;
-            padding: 100px;
+            align-items: left;
+            padding: 30px;
+            width: 95%;
             background-color: white;
             border-radius: 10px;
-            margin: 40px;
+            margin: 10px;
+            box-shadow: 0px 3px 10px #e2e9f1;//rgba(0,0,0,0.2)
         }
-        
+        .row {
+            display: flex;
+            align-items: center;
+            padding-bottom: 20px;
+        }
+        h3 {
+            margin-right: 20px;
+            margin-bottom: 5px;
+            left: 0;
+        }
+        table {
+            border-spacing: 8px;
+            width: content;
+            left: 0;
+        }
+        {% comment %} tr {
+            display: flex;
+            flex-direction: row;
+        } {% endcomment %}
+        td:first-child {
+            {% comment %} width: content; {% endcomment %}
+            height: 25px;
+            {% comment %} border: 1px solid; {% endcomment %}
+        }
+        .input {
+            height: 25px;
+            padding: 3px;
+            width: min-content;
+            border-radius: 5px;
+            border: 1px solid;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="block-rect">
-            <p>
-                jakiś tekst
-            </p>
-            <button>
-                przycisk
-            </button>
-            <h2>Wybrana szkoła:</h2>
-            <p>{{ nazwa_szkoly }}</p>
-            <p>Ades:</p>
-            <p>{{ miasto }}, {{ ulica }} {{ numer }}</p>
+            <h3>1. Miejsce odbioru:</h3>
+            <hr>
+            <table>
+                <tr>
+                    <td>Nazwa szkoły:</td>
+                    <td>{{ nazwa_szkoly }}</td>
+                </tr>
+                <tr>
+                    <td>Miejscowość:</td>
+                    <td><input class="input" type="text" value="{{ miasto }}"></td>
+                </tr>
+                <tr>
+                    <td>Ulica:</td>
+                    <td><input class="input" type="text" value="{{ ulica }}"></td>
+                </tr>
+                <tr>
+                    <td>Numer:</td>
+                    <td><input class="input" type="text" value="{{ numer}}"></td>
+                </tr>
+            </table>
             <form method="post">
             {% csrf_token %}
             </form>
+        </div>
+        <div class="block-rect">
+            <h3>2. Data odbioru:</h3>
+            <hr>
+            <table>
+                <tr>
+                    <td>Wybierz datę:</td>
+                    <td>
+                        <input class="input" type="date" id="data_odbioru" name="data_odbioru">
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="block-rect">
+            <h3>3. Nr umowy:</h3>
+            <hr>
+            <table>
+                <tr>
+                    <td>Podaj numer umowy:</td>
+                    <td>
+                        <input class="input" type="text" id="nr_umowy" name="nr_umowy">
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="block-rect">
+            <h3>4. Potwierdzenie kompletności realizacji przedmiotu Umowy:</h3>
+            <hr>
+
         </div>
     </div>
 </body>
