--- a/rapsteam/common/templates/wybor_szkoly2.html
+++ b/rapsteam/common/templates/wybor_szkoly2.html
@@ -202,6 +202,25 @@
                 </tr>
             </table>
         </div>
+        <div class="block-rect">
+            <h3>9. Podpisy:</h3>
+            <hr>
+            <p style="margin: 5px;">Podpisy będą dostępne do uzupełnienia ręcznie po wydrukowaniu.</p>
+        </div>
+        <div class="block-rect">
+            <h3>10. Zamawiany sprzęt:</h3>
+            <hr>
+            <table id="przedmioty">
+                <tr>
+                    <td>Lp</td>
+                    <td>Nazwa przedmiotu</td>
+                    <td>Ilość</td>
+                    <td>Nr Seryjny</td>
+                    <td>Świadectwo jakości</td>
+                    <td>Uwagi</td>
+                </tr>
+            </table>
+        </div>
     </div>
     <script>
         const kompl_tak = document.querySelector('input[name="kompl_tak"][value="kompl_tak"]');
