--- a/rapsteam/common/templates/index.html
+++ b/rapsteam/common/templates/index.html
@@ -13,21 +13,22 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding-top: 80px;
-            height: 100%;
+            padding-top: 100px;
+            min-height: 100%;
             background-color: #F5F7FA;
-            box-shadow: 0px 3px 2px rgba(0,0,0,0.2)
         }
 
-        
         .block-rect {
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 100px;
+            padding: 50px;
+            width: 95%;
+            height: 95%;
             background-color: white;
             border-radius: 10px;
-            margin: 40px;
+            margin: 10px;
+            box-shadow: 0px 3px 10px #e2e9f1;//rgba(0,0,0,0.2)
         }
 
         #school-select {
